--- a/index.html
+++ b/index.html
@@ -192,12 +192,13 @@
                                 <ul class="space-y-2 text-xs text-gray-600">
                                     <li><span class="font-bold text-slate-800">🏨 黑川 深山山莊:</span> <span class="text-red-500">Deadline: Now!</span><br><span class="bg-gray-100 p-1 rounded select-all block mt-1">"One guest cannot eat seafood and offal. Please arrange beef or pork. Need Golf Cart service for elderly."</span></li>
                                     <li><span class="font-bold text-slate-800">🚘 租車 (Noah/Alphard):</span> <span class="text-red-500">1月尾前</span><br>記得剔 ETC & NOC 全保。</li>
+                                    <li><span class="font-bold text-slate-800">🍱 柳川御花 對月館:</span> Deadline: Now</li>
                                 </ul>
                             </div>
                             <div>
                                 <h4 class="font-bold text-orange-500 mb-2 border-b border-orange-100 pb-1">⚠️ Level 2: 3月初 (1個月前)</h4>
                                 <ul class="space-y-2 text-xs text-gray-600">
-                                    <li><span class="font-bold text-slate-800">🍢 燒鳥 Torine:</span> 3月9日 (請酒店幫手打電話)</li>
+                                    
                                     <li><span class="font-bold text-slate-800">🍲 華味鳥 (天神):</span> 3月12日 (官網訂 Table Seat)</li>
                                     <li><span class="font-bold text-slate-800">🥩 佐賀牛 季樂:</span> 3月13日 (TableCheck)</li>
                                 </ul>
