--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <ul class="space-y-2 text-xs text-gray-600">
                                     <li><span class="font-bold text-slate-800">🏨 黑川 深山山莊:</span> <span class="text-red-500">Deadline: Now!</span><br><span class="bg-gray-100 p-1 rounded select-all block mt-1">"One guest cannot eat seafood and offal. Please arrange beef or pork. Need Golf Cart service for elderly."</span></li>
                                     <li><span class="font-bold text-slate-800">🚘 租車 (Noah/Alphard):</span> <span class="text-red-500">1月尾前</span><br>記得剔 ETC & NOC 全保。</li>
-                                    <li><span class="font-bold text-slate-800">🍱 柳川御花 對月館:</span> Deadline: Now</li>
+                                    <li><span class="font-bold text-slate-800">🍱 柳川御花 對月館:</span> <span class="text-red-500">Deadline: Now!</span>
                                 </ul>
                             </div>
                             <div>
